src/test/deca/context/valid/class_decl/surcharge.deca
// Description:
//    Héritage d'une classe
//
// Resultats:
//    Aucune erreur
// 
// Historique:
//    cree le 01/01/2016

class A {
	void m() {
	}
	void m(int a) {

	}
}

{
	A b;
	b.m();
}

