src/test/deca/context/invalid/class/autoreference/wrongclass.deca
// Description:
//    Affectation de this à un objet de classe différente
//
// Resultats:
//    Incompatile type
// 
// Historique:
//    cree le 01/01/2016

class B {

}

class A {
	void m() {
		B a = this;
	}
}

{

}

